Removed list group
Made the HTML code cleaner by getting rid of redundancies. Added an event listener in JQuery for adding a task if the button was clicked. It spawns a list.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>To-Do List</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/script.js"></script>
   </head>
   <body>
       <div class="container">
@@ -9,14 +11,8 @@
               <div class="panel-heading">
                   <h3 class="panel-title">To Do List</h3>
               </div>
-              <!-- List group -->
-              <ul id="list" class="list-group">
-                  <li class="list-group-item"><span class="badge">X</span>Pushups!</li>
-                  <li class="list-group-item"><span class="badge">X</span>Get Money</li>
-                  <li class="list-group-item"><span class="badge">X</span>Increase my word power</li>
-                  <li class="list-group-item"><span class="badge">X</span>Beat God at his own game</li>
-                  <li class="list-group-item"><span class="badge">X</span>Make everything go my way</li>
-              </ul>
+              <!-- List block -->
+              <ul id="list" class="list-group"></ul>
           </div>
           <!-- text input & button -->
           <div class="row">
