Changed li to input
The input boxes should prep me for adding an edit function to the tasks.

Also created my css file for the project.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
     <title>To-Do List</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
   </head>
@@ -12,7 +15,9 @@
                   <h3 class="panel-title">To Do List</h3>
               </div>
               <!-- List block -->
-              <ul id="list" class="list-group"></ul>
+              <ul id="list" class="list-group">
+                <input type="text" class="text" value="test" readonly/>
+              </ul>
           </div>
           <!-- text input & button -->
           <div class="row">
