--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
                   <h3 class="panel-title">To Do List</h3>
               </div>
               <!-- List block -->
-              <ul id="list" class="list-group">
-                <input type="text" class="text" value="test" readonly/>
+              <ul id="list" class="list-group"
               </ul>
           </div>
           <!-- text input & button -->
